// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraftExpansionPrompt golden > defaults to the generic variant without context 1`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the generic variant 1`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "[선택 영역]",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the generic variant 2`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
[선택 영역]",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the generic variant 3`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "배경: 교실
[선택 영역]",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the generic variant 4`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
[선택 영역]",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the generic variant 5`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "[선택 영역]",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the xs variant 1`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the xs variant 2`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "활성 캐릭터: 엘리아",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the xs variant 3`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "배경: 교실",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the xs variant 4`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "활성 캐릭터: 엘리아
배경: 교실",
}
`;

exports[`DraftExpansionPrompt golden > drops an empty selection for the xs variant 5`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the generic variant 1`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the generic variant 2`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the generic variant 3`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "배경: 교실
[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the generic variant 4`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the generic variant 5`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the xs variant 1`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the xs variant 2`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "활성 캐릭터: 엘리아
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the xs variant 3`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "배경: 교실
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the xs variant 4`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > drops each missing context line for the xs variant 5`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "장면 확장 전문 작가다.
선택 본문을 같은 문체/시점으로 2~4배 자연스럽게 확장하라.
새 정보는 최소화하고 기존 의미를 유지하며 밀도만 높여라.
출력은 확장된 본문만 허용한다.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
[선택 영역]
그는 문을 열었다.
바람이 불었다.",
}
`;

exports[`DraftExpansionPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "선택 본문을 같은 문체로 2~4배 확장. 의미 유지, 결과 본문만 출력.",
  "user": "활성 캐릭터: 엘리아
배경: 교실
그는 문을 열었다.
바람이 불었다.",
}
`;
